--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body, #main-wrapper, .bg-overlay {
     width:100%;
     height:100%; 
+    overflow: hidden;
 }
 
 #main-wrapper {
@@ -65,4 +66,15 @@ a.std-button {
 
 a.std-button:visited {
     color: white;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 1em;
+    width: 100%;
+    text-align: center;
+    color: white;
+    background-color: #506671;
 }
