--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,19 @@ html, body, #main-wrapper, .bg-overlay {
     border: 1px solid #37474F;
     border-radius: 30px;
     padding: .6em 4em;
-    box-shadow: 1px 2px 5px #000;
+    box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.4);
+    transition: box-shadow .3s, background-color .2s;
 }
+
 .std-button:hover {
+    box-shadow: 0px 6px 18px 0px rgba(0,0,0,0.45);
     background-color: #506671;
     border-color: #506671;
+}
+
+.std-button:active {
+    background-color: #728994;
+    border-color: #728994;
 }
 
 a.std-button {
