--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -94,11 +94,16 @@ footer {
  * Blog Posts
  */
 .blog-post {
-  padding: 2em;
   margin-bottom: 2rem;
   border-radius: .4rem;
   background: $background-color;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, .23);
+  padding: 2em;
+  
+  @include media-phone() {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
   
   .title {
     color: $text-color;
