--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,7 +54,7 @@ footer {
 /**
  * Page
  */
-.page-content {
+.page {
   margin: auto;
   margin-bottom: 5em;
   max-width: 100%;
@@ -66,6 +66,18 @@ footer {
   
   @include media-desktop() {
     max-width: $content-width;
+  }
+}
+.page-content {
+  margin-bottom: 2rem;
+  border-radius: .4rem;
+  background: $background-color;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, .23);
+  padding: 2em;
+  
+  @include media-phone() {
+    padding-left: 1em;
+    padding-right: 1em;
   }
 }
 
@@ -122,5 +134,24 @@ footer {
   
   p {
     margin-bottom: 1em;
+  }
+  
+  .footnote {
+    margin-top: 3em;
+    margin-bottom: 0;
+    
+    .icon {
+      margin-left: .5em;
+      
+      > svg  {
+        vertical-align: middle;
+        height: 1.3em;
+        width: 1.3em;
+      
+        path {
+          fill: rgba(0, 0, 0, .6);
+        }
+      }
+    }
   }
 }
