--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,13 +2,15 @@
 layout: page
 ---
 
-<h1 class="title">Articles in {{ page.category }}</h1>
+<h1 class="title">Articles in category {{ page.category }}</h1>
 
 {% if site.categories[page.category] %}
   <ul>
   {% for post in site.categories[page.category] %}
     <li class="big-list-content">
-      <a class="subtitle" href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <span> - </span>
+      <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
       <blockquote>{{ post.excerpt }}</blockquote>
     </li>
   {% endfor %}
