--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,9 +36,9 @@ layout: default
   {% if page.category and page.tags.size > 0 %}
     
     Posted in <a class="category" href="{{ category_url }}">{{ page.category }}</a>
-    with <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in page.tags %}<a class="tag" href="/blog/tags#{{ tag }}">{{ tag | capitalize}}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+    with <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in page.tags %}<a class="tag" href="/blog/tag/s#{{ tag }}">{{ tag | capitalize}}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
   {% elsif page.tags.size > 0 %}
-    <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in page.tags %}<a class="tag" href="/blog/tags#{{ tag }}">{{ tag | capitalize }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+    <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in page.tags %}<a class="tag" href="/blog/tags/#{{ tag }}">{{ tag | capitalize }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
   {% elsif page.category %}
     Posted in <a class="category" href="{{ category_url }}">{{ page.category }}</a>
   {% endif %}
