--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,12 +4,12 @@
 
 #site-header {
   &.header-expanded {
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 16.6%;
+    margin-bottom: 16.6%;
     
     @include media-desktop() {
-      margin-top: 10em;
-      margin-bottom: 10em;
+      margin-top: 8em;
+      margin-bottom: 8em;
     }
   }
   
@@ -22,13 +22,17 @@
       margin-bottom: 2em;
     }
   }
+  
+  .button-container {
+    margin-top: 3em;
+    margin-bottom: 3em;
+  }
 }
 
 .logo-wrapper {
   width: 100%;
   height: 100%;
-  max-width: 450px;
-  max-height: 190px;
+  max-width: 45rem;
   margin: -1em auto 0 auto;
   
   img {
@@ -72,12 +76,20 @@ footer {
   margin-bottom: 2rem;
   border-radius: .4rem;
   background: $background-color;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, .23);
+  box-shadow: 0 .2rem 1.5rem rgba(0, 0, 0, .23);
   padding: 2em;
   
   @include media-phone() {
     padding-left: 1em;
     padding-right: 1em;
+  }
+}
+.tag-collection {
+  line-height: 2em;
+  margin-bottom: 1em;
+  
+  .category {
+    margin-right: .6em;
   }
 }
 
@@ -109,7 +121,7 @@ footer {
   margin-bottom: 2rem;
   border-radius: .4rem;
   background: $background-color;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, .23);
+  box-shadow: 0 .2rem 1.5rem rgba(0, 0, 0, .23);
   padding: 2em;
   
   @include media-phone() {
