Added all-post page (not linked yet) plus some minor improvements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="site-header" class="centered-content{% if page.url == '/' %} header-expanded{% else %} header-contracted{% endif %}">
   <a href="/">
-    <img class="logo-wrapper" src="/assets/images/logo-text.png" alt="Project Lemon logo">
+    <img class="logo-wrapper" src="/assets/images/logo-text.svg" alt="Project Lemon logo">
   </a>
   <div class="button-container">
     <a class="std-button" href="https://github.com/ProjectLemon"><span class="icon">{% include /vectors/github-icon.svg %}</span> Find us on github!</a>
